--- a/src/com/googlecode/barongreenback/shared/style.less
+++ b/src/com/googlecode/barongreenback/shared/style.less
@@ -80,6 +80,10 @@ input.delete, input.stop, input.reset {
     .btn.danger;
 }
 
+div.nameValue {
+    vertical-align: top;
+}
+
 div.control, div.nameValue {
     .inlineBlock;
     margin: 5px;
@@ -158,6 +162,9 @@ form.view {
     display: none;
 }
 
+form.search {
+    .inlineBlock;
+}
 
 form.delete, form.crawl, form.start, form.stop, form.copy, form.reset {
     margin: 0;
